WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311596
Exiting from a full screen media document should not return to the previous page on iPadOS
https://bugs.webkit.org/show_bug.cgi?id=311596
Summary
Exiting from a full screen media document should not return to the previous p...
Eric Carlson
Reported
2026-04-06 15:40:45 PDT
Exiting from fullscreen mode with a MediaDocument returns to the previous page on iOS. This was originally done because inline playback wasn't possible on iPhone. Inline playback is always available on iPadOS, so the behavior doesn't make sense.
Attachments
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2026-04-06 15:41:30 PDT
rdar://137220651
Eric Carlson
Comment 2
2026-04-06 16:30:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62151
EWS
Comment 3
2026-04-07 09:56:45 PDT
Committed
310718@main
(2cf44999a61a): <
https://commits.webkit.org/310718@main
> Reviewed commits have been landed. Closing PR #62151 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug