Exiting from a full screen media document should not return to the previous page on iPadOS https://bugs.webkit.org/show_bug.cgi?id=311596 rdar://137220651

Reviewed by Jer Noble.

Exiting from fullscreen mode with a MediaDocument on iOS navigates to the previous page.
This was originally done because inline playback wasn't allowed on iOS. This behavior
no longer make sense on iPadOS where inline playback is always available, so only navigate
on small-screen devices.

Tested manually.

* Source/WebCore/platform/cocoa/VideoPresentationModelVideoElement.mm:
(WebCore::VideoPresentationModelVideoElement::requestFullscreenMode):

Canonical link: https://commits.webkit.org/310718@main